// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell children 1`] = `
<div
  class="zs-cell"
>
  <div
    class="zs-cell__inner"
  >
    <div
      class="zs-cell__header"
    />
    <div
      class="zs-cell__body"
    >
      <div
        class="zs-cell__content"
      >
        this is children!
      </div>
    </div>
    <div
      class="zs-cell__footer"
    />
  </div>
</div>
`;

exports[`Cell description 1`] = `
<div
  class="zs-cell"
>
  <div
    class="zs-cell__inner"
  >
    <div
      class="zs-cell__header"
    />
    <div
      class="zs-cell__body"
    >
      <div
        class="zs-cell__title"
      >
        标题文字
      </div>
    </div>
    <div
      class="zs-cell__footer"
    >
      描述文字
    </div>
  </div>
</div>
`;

exports[`Cell help 1`] = `
<div
  class="zs-cell"
>
  <div
    class="zs-cell__inner"
  >
    <div
      class="zs-cell__header"
    />
    <div
      class="zs-cell__body"
    >
      <div
        class="zs-cell__title"
      >
        标题文字
      </div>
    </div>
    <div
      class="zs-cell__footer"
    >
      描述文字
    </div>
  </div>
  <div
    class="zs-cell__help"
  >
    <span>
      message
    </span>
  </div>
</div>
`;

exports[`Cell icon 1`] = `
<div
  class="zs-cell"
>
  <div
    class="zs-cell__inner"
  >
    <div
      class="zs-cell__header"
    >
      <div
        class="zs-cell__icon"
      >
        <img
          alt=""
          src="\\\\\\\\static.zhongan.com/website/health/zarm/images/icons/state.png"
        />
      </div>
    </div>
    <div
      class="zs-cell__body"
    >
      <div
        class="zs-cell__title"
      >
        标题文字
      </div>
    </div>
    <div
      class="zs-cell__footer"
    >
      描述文字
    </div>
  </div>
</div>
`;

exports[`Cell onClick 1`] = `
<div
  className="zs-cell zs-cell--link zs-cell--arrow"
  onClick={[MockFunction]}
  onTouchStart={[Function]}
>
  <div
    className="zs-cell__inner"
  >
    <div
      className="zs-cell__header"
    />
    <div
      className="zs-cell__body"
    >
      <div
        className="zs-cell__title"
      >
        标题文字
      </div>
    </div>
    <div
      className="zs-cell__footer"
    >
      描述文字
    </div>
    <div
      className="zs-cell__arrow"
    />
  </div>
</div>
`;

exports[`Cell renders correctly 1`] = `
<div
  class="zs-cell"
>
  <div
    class="zs-cell__inner"
  >
    <div
      class="zs-cell__header"
    />
    <div
      class="zs-cell__body"
    >
      <div
        class="zs-cell__title"
      >
        标题文字
      </div>
    </div>
    <div
      class="zs-cell__footer"
    />
  </div>
</div>
`;
